<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_tb"
        android:text="@string/txt_info_title"
        android:textSize="@dimen/title_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideInfoLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideInfoTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideInfoBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/txtStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_student_id"
        app:layout_constraintBottom_toTopOf="@id/txtStudentName"
        app:layout_constraintLeft_toRightOf="@id/guideInfoLeft"
        app:layout_constraintTop_toBottomOf="@id/guideInfoTop" />


    <TextView
        android:id="@+id/txtStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_student_name"
        app:layout_constraintBottom_toBottomOf="@id/guideInfoBottom"
        app:layout_constraintLeft_toLeftOf="@id/txtStudentId"
        app:layout_constraintTop_toBottomOf="@id/txtStudentId" />

    <EditText
        android:id="@+id/editStudentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_lr"
        android:hint="@string/txt_hint"
        app:layout_constraintBottom_toBottomOf="@id/txtStudentId"
        app:layout_constraintLeft_toRightOf="@id/txtStudentId"
        app:layout_constraintTop_toTopOf="@id/txtStudentId" />

    <EditText
        android:id="@+id/editStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_hint"
        app:layout_constraintBottom_toBottomOf="@id/txtStudentName"
        app:layout_constraintLeft_toLeftOf="@id/editStudentId"
        app:layout_constraintTop_toTopOf="@id/txtStudentName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/default_margin_lr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideInfoBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>